# ImageAnalysis3PR

./: README.md  pyproject.toml  requirements.txt
src/ia/: __init__.py  alignment_tools.py  corrections.py  get_img_info.py  postanalysis.py  visual_tools.py
src/ia/classes/: __init__.py  batch_functions.py  field_of_view.py  new_decoder.py
src/ia/compartment_tools/: scoring.py
src/ia/correction_tools/: alignment.py  bleedthrough.py  chromatic.py  illumination.py
src/ia/domain_tools/: __init__.py  calling.py  distance.py  interaction.py  manual.py
src/ia/figure_tools/: domain.py  image.py
src/ia/io_tools/: crop.py  load.py
src/ia/library_tools/: LibraryDesigner.py  assemble.py  design.py  quality_check.py  sequences.py
src/ia/library_tools/C_Tools/: seqint.c  setup.py
src/ia/required_files/: pickle2reducer.py  pickle4reducer.py
src/ia/segmentation_tools/: cell.py  chromosome.py
src/ia/spot_tools/: checking.py  fitting.py  matching.py  picking.py  scoring.py  translating.py
tests/: test_segmentation_io_and_plotting.py
