[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ImageAnalysis"
version = "0.1.0-dev1"
description = "Analyzing images for DNA and RNA MERFISH"
readme = "README.md"
authors = [
    { name = "Pu Zheng", email = "puzheng@fas.harvard.edu" },
    { name = "Peter Ren", email = "peterren@g.harvard.edu" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["MERFISH", "Single Cell", "Genome Structure"]

[project.optional-dependencies]
dev = [
    "pytest",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = [
"src",
]


